tools/clang/iterator_checker/tests/simple-invalid-iterators.txt
simple-invalid-iterators.cpp:8:31: error: [iterator-checker] Potentially invalid iterator used.
  for (; it != std::end(v); ++it) {
                              ^
simple-invalid-iterators.cpp:8:31: error: [iterator-checker] Potentially invalid iterator used.
simple-invalid-iterators.cpp:8:31: error: [iterator-checker] Potentially invalid iterator used.
simple-invalid-iterators.cpp:30:5: error: [iterator-checker] Potentially invalid iterator used.
  ++it;
    ^
4 errors generated.
